<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_take_photo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/title_divider_color" />

        <TextView
            android:id="@+id/tv_select_photo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/select_photo"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:elevation="4dp"
        android:textColor="#1a1a1a"
        android:textSize="15sp" />

</LinearLayout>