<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/layout_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="91dp"
        android:text="@string/account_balance"
        android:textColor="#333333"
        android:textSize="13sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="$100.63"
        android:textColor="#333333"
        android:textSize="26sp"/>

    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/bg_corner_5dp_2196f3"
        android:text="@string/recharge"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_choose_item"
        android:text="@string/withdraw"
        android:textColor="#2196f3"
        android:textSize="15sp"/>
</LinearLayout>